# indexao

./: .AI-INSTRUCTIONS.md  .gitignore  CLOUD-INDEXING.md  Makefile  QUICK-START.md  README.md  TECH-STANDARDS.md  arch-tech.md  changelog.md  cloud-indexer-tao.sh  config.example.toml  demo_adapters.py  demo_config.py  demo_logger.py  demo_paths.py  demo_plugin_manager.py  pyproject.toml  test_log_fix.py
.github/workflows/: ci.yml  docs.yml
ci/: indexao-api.sh
config/: FilesExtensionsToScan.txt  com.indexao.cloud-indexer.plist
data/: cloud_indexer_state.json  indexao.db
input/_queue/: DOC_013A354E_upload_1762394984.488027_final_refactoring_test.txt  DOC_08D2EC3E_upload_1762393368.002295_logging_test.txt  DOC_3B8DD061_upload_1762396414.59095_sprint1_p3_complete.txt  DOC_9DFD8E84_upload_1762392911.353591_single_test.txt  DOC_BBDD4BB6_upload_1762395048.121255_validation_test.txt  DOC_C3A24897_upload_1762395483.148269_adapters_test.txt  DOC_CBD0E8CD_upload_1762396038.92876_database_test.txt  DOC_E0E93407_upload_1762392834.666446_test_pipeline.txt  DOC_F9688F9F_upload_1762394532.292569_path_manager_test.txt
nginx/: README.md  indexao.conf
src/indexao/: __init__.py  cloud_indexer.py  config.py  database.py  framework_manager.py  logger.py  plugin_manager.py  plugin_routes.py  processor.py  scanner.py  search_routes.py  upload_handler.py  webui.py
src/indexao/adapters/: __init__.py
src/indexao/adapters/ocr/: __init__.py  base.py  mock.py  tesseract.py
src/indexao/adapters/search/: __init__.py  (+3 more)
src/indexao/models/: __init__.py  document.py
src/indexao/paths/: __init__.py  base.py  local.py
src/indexao/pipeline/: __init__.py  document_processor.py  routes.py
src/indexao/static/: frameworks.json
src/indexao/templates/: base.html  config.html  config_indexao.html  config_old.html  documents.html  index.html  search.html
tests/: __init__.py
tests/unit/: test_adapters.py  test_config.py  test_logger.py  test_paths.py
(+10 files in other folders)
